kubernetes-yaml/ingress/ingress-allure.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: allure-report
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/app-root: /allure-report
spec:
  tls:
    - hosts:
        - report.cluster-test-platform-6474a10db2e260c615f9d4313ecdc8bc-0000.eu-de.containers.appdomain.cloud
      secretName: cluster-test-platform-6474a10db2e260c615f9d4313ecdc8bc-0000
  rules:
    - host: report.cluster-test-platform-6474a10db2e260c615f9d4313ecdc8bc-0000.eu-de.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: allure-report
              servicePort: 80
