kubernetes-yaml/ingress/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: kube-logging
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - kibana.cluster-test-platform-6474a10db2e260c615f9d4313ecdc8bc-0000.eu-de.containers.appdomain.cloud
      secretName: cluster-test-platform-6474a10db2e260c615f9d4313ecdc8bc-0000
  rules:
    - host: kibana.cluster-test-platform-6474a10db2e260c615f9d4313ecdc8bc-0000.eu-de.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: kibana
              servicePort: 5601
